--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <meta name="aplus-auto-exp" content='[{"filter":"exp-tracking=suggest-official-store","logkey":"/lzdse.result.os_impr","props":["href"],"tag":"a"}]' />
     <meta name="google-site-verification" content="Vrg7ncXoiFGp5SppMKOwgQCZ1oFJQ2hIRfhfr7ztiy8" />
+    <meta name="google-site-verification" content="BW3kWYmEkKN-0QMWSBBgxOSop9_IzHXsvtMufOEX5qA" />
     <meta name="data-spm" content="BANDAR TOTO" />
     <meta name="robots" content="index, follow" />
     <meta name="language" content="Indonesia" />
